tests/paczka1/fuzzy1/84295837.err
Error in line 1: UDgq S643 86,3
Error in line 6: IqT A388 72,5
Error in line 5: A916 A916 71,9
Error in line 11: A916 A388 99,4
Error in line 10: IqT A916 81,5
Error in line 16: Yhj3 A916 79,3
Error in line 14: A916 S643 51,2
Error in line 20: A916 A388 314,00
Error in line 19: UDgq S572 41,2
Error in line 17: Yhj3 S572 26,5
Error in line 18: A916 A388 96,6
